tests/testdata/negative/type_mismatch.go
package main
func main() {
  fmt.Println(1 + 2.0);
}
